// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Executable process list captures command line when present (linux) 1`] = `
Array [
  Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [
          Object {
            "childProcessInfos": Array [],
            "commandLine": "/tmp/child.sh arg1",
            "parentProcessInfo": [Circular],
            "processId": 11,
            "processName": "child",
          },
        ],
        "commandLine": "/usr/bin/node --foo --bar=baz",
        "parentProcessInfo": [Circular],
        "processId": 10,
        "processName": "node",
      },
    ],
    "parentProcessInfo": undefined,
    "processId": 0,
    "processName": "",
  },
  Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [],
        "commandLine": "/tmp/child.sh arg1",
        "parentProcessInfo": [Circular],
        "processId": 11,
        "processName": "child",
      },
    ],
    "commandLine": "/usr/bin/node --foo --bar=baz",
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "",
    },
    "processId": 10,
    "processName": "node",
  },
  Object {
    "childProcessInfos": Array [],
    "commandLine": "/tmp/child.sh arg1",
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "commandLine": "/usr/bin/node --foo --bar=baz",
      "parentProcessInfo": Object {
        "childProcessInfos": Array [
          [Circular],
        ],
        "parentProcessInfo": undefined,
        "processId": 0,
        "processName": "",
      },
      "processId": 10,
      "processName": "node",
    },
    "processId": 11,
    "processName": "child",
  },
]
`;

exports[`Executable process list captures command line when present (win32) 1`] = `
Array [
  Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [
          Object {
            "childProcessInfos": Array [],
            "commandLine": "helper.exe --opt arg",
            "parentProcessInfo": [Circular],
            "processId": 101,
            "processName": "helper.exe",
          },
        ],
        "commandLine": "C:\\\\Program Files\\\\nodejs\\\\node.exe --foo --bar=baz",
        "parentProcessInfo": [Circular],
        "processId": 100,
        "processName": "node.exe",
      },
    ],
    "parentProcessInfo": undefined,
    "processId": 0,
    "processName": "",
  },
  Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [],
        "commandLine": "helper.exe --opt arg",
        "parentProcessInfo": [Circular],
        "processId": 101,
        "processName": "helper.exe",
      },
    ],
    "commandLine": "C:\\\\Program Files\\\\nodejs\\\\node.exe --foo --bar=baz",
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "",
    },
    "processId": 100,
    "processName": "node.exe",
  },
  Object {
    "childProcessInfos": Array [],
    "commandLine": "helper.exe --opt arg",
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "commandLine": "C:\\\\Program Files\\\\nodejs\\\\node.exe --foo --bar=baz",
      "parentProcessInfo": Object {
        "childProcessInfos": Array [
          [Circular],
        ],
        "parentProcessInfo": undefined,
        "processId": 0,
        "processName": "",
      },
      "processId": 100,
      "processName": "node.exe",
    },
    "processId": 101,
    "processName": "helper.exe",
  },
]
`;

exports[`Executable process list parses unix output 1`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [
            Object {
              "childProcessInfos": Array [],
              "commandLine": " ",
              "parentProcessInfo": [Circular],
              "processId": 4,
              "processName": "process2",
            },
          ],
          "parentProcessInfo": [Circular],
          "processId": 2,
          "processName": "process0",
        },
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "process1",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 1,
      "processName": "init",
    },
  ],
  "parentProcessInfo": undefined,
  "processId": 0,
  "processName": "",
}
`;

exports[`Executable process list parses unix output 2`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [],
          "commandLine": " ",
          "parentProcessInfo": [Circular],
          "processId": 4,
          "processName": "process2",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 2,
      "processName": "process0",
    },
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 3,
      "processName": "process1",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": undefined,
    "processId": 0,
    "processName": "",
  },
  "processId": 1,
  "processName": "init",
}
`;

exports[`Executable process list parses unix output 3`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [],
      "commandLine": " ",
      "parentProcessInfo": [Circular],
      "processId": 4,
      "processName": "process2",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
      Object {
        "childProcessInfos": Array [],
        "parentProcessInfo": [Circular],
        "processId": 3,
        "processName": "process1",
      },
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "",
    },
    "processId": 1,
    "processName": "init",
  },
  "processId": 2,
  "processName": "process0",
}
`;

exports[`Executable process list parses unix output 4`] = `
Object {
  "childProcessInfos": Array [],
  "commandLine": " ",
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "process1",
        },
      ],
      "parentProcessInfo": Object {
        "childProcessInfos": Array [
          [Circular],
        ],
        "parentProcessInfo": undefined,
        "processId": 0,
        "processName": "",
      },
      "processId": 1,
      "processName": "init",
    },
    "processId": 2,
    "processName": "process0",
  },
  "processId": 4,
  "processName": "process2",
}
`;

exports[`Executable process list parses unix output 5`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [
          Object {
            "childProcessInfos": Array [],
            "commandLine": " ",
            "parentProcessInfo": [Circular],
            "processId": 4,
            "processName": "process2",
          },
        ],
        "parentProcessInfo": [Circular],
        "processId": 2,
        "processName": "process0",
      },
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "",
    },
    "processId": 1,
    "processName": "init",
  },
  "processId": 3,
  "processName": "process1",
}
`;

exports[`Executable process list parses unix stream output 1`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [
            Object {
              "childProcessInfos": Array [],
              "commandLine": " ",
              "parentProcessInfo": [Circular],
              "processId": 4,
              "processName": "process2",
            },
          ],
          "parentProcessInfo": [Circular],
          "processId": 2,
          "processName": "process0",
        },
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "process1",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 1,
      "processName": "init",
    },
  ],
  "parentProcessInfo": undefined,
  "processId": 0,
  "processName": "",
}
`;

exports[`Executable process list parses unix stream output 2`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [],
          "commandLine": " ",
          "parentProcessInfo": [Circular],
          "processId": 4,
          "processName": "process2",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 2,
      "processName": "process0",
    },
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 3,
      "processName": "process1",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": undefined,
    "processId": 0,
    "processName": "",
  },
  "processId": 1,
  "processName": "init",
}
`;

exports[`Executable process list parses unix stream output 3`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [],
      "commandLine": " ",
      "parentProcessInfo": [Circular],
      "processId": 4,
      "processName": "process2",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
      Object {
        "childProcessInfos": Array [],
        "parentProcessInfo": [Circular],
        "processId": 3,
        "processName": "process1",
      },
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "",
    },
    "processId": 1,
    "processName": "init",
  },
  "processId": 2,
  "processName": "process0",
}
`;

exports[`Executable process list parses unix stream output 4`] = `
Object {
  "childProcessInfos": Array [],
  "commandLine": " ",
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "process1",
        },
      ],
      "parentProcessInfo": Object {
        "childProcessInfos": Array [
          [Circular],
        ],
        "parentProcessInfo": undefined,
        "processId": 0,
        "processName": "",
      },
      "processId": 1,
      "processName": "init",
    },
    "processId": 2,
    "processName": "process0",
  },
  "processId": 4,
  "processName": "process2",
}
`;

exports[`Executable process list parses unix stream output 5`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [
          Object {
            "childProcessInfos": Array [],
            "commandLine": " ",
            "parentProcessInfo": [Circular],
            "processId": 4,
            "processName": "process2",
          },
        ],
        "parentProcessInfo": [Circular],
        "processId": 2,
        "processName": "process0",
      },
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "",
    },
    "processId": 1,
    "processName": "init",
  },
  "processId": 3,
  "processName": "process1",
}
`;

exports[`Executable process list parses win32 output 1`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [
            Object {
              "childProcessInfos": Array [],
              "parentProcessInfo": [Circular],
              "processId": 4,
              "processName": "executable2.exe",
            },
          ],
          "parentProcessInfo": [Circular],
          "processId": 2,
          "processName": "executable0.exe",
        },
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "executable1.exe",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 1,
      "processName": "System",
    },
  ],
  "parentProcessInfo": undefined,
  "processId": 0,
  "processName": "System Idle Process",
}
`;

exports[`Executable process list parses win32 output 2`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 4,
          "processName": "executable2.exe",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 2,
      "processName": "executable0.exe",
    },
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 3,
      "processName": "executable1.exe",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": undefined,
    "processId": 0,
    "processName": "System Idle Process",
  },
  "processId": 1,
  "processName": "System",
}
`;

exports[`Executable process list parses win32 output 3`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 4,
      "processName": "executable2.exe",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
      Object {
        "childProcessInfos": Array [],
        "parentProcessInfo": [Circular],
        "processId": 3,
        "processName": "executable1.exe",
      },
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "System Idle Process",
    },
    "processId": 1,
    "processName": "System",
  },
  "processId": 2,
  "processName": "executable0.exe",
}
`;

exports[`Executable process list parses win32 output 4`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "executable1.exe",
        },
      ],
      "parentProcessInfo": Object {
        "childProcessInfos": Array [
          [Circular],
        ],
        "parentProcessInfo": undefined,
        "processId": 0,
        "processName": "System Idle Process",
      },
      "processId": 1,
      "processName": "System",
    },
    "processId": 2,
    "processName": "executable0.exe",
  },
  "processId": 4,
  "processName": "executable2.exe",
}
`;

exports[`Executable process list parses win32 output 5`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [
          Object {
            "childProcessInfos": Array [],
            "parentProcessInfo": [Circular],
            "processId": 4,
            "processName": "executable2.exe",
          },
        ],
        "parentProcessInfo": [Circular],
        "processId": 2,
        "processName": "executable0.exe",
      },
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "System Idle Process",
    },
    "processId": 1,
    "processName": "System",
  },
  "processId": 3,
  "processName": "executable1.exe",
}
`;

exports[`Executable process list parses win32 output 6`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 5,
      "processName": "executable3.exe",
    },
  ],
  "parentProcessInfo": undefined,
  "processId": 6,
  "processName": "",
}
`;

exports[`Executable process list parses win32 output 7`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": undefined,
    "processId": 6,
    "processName": "",
  },
  "processId": 5,
  "processName": "executable3.exe",
}
`;

exports[`Executable process list parses win32 stream output 1`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [
            Object {
              "childProcessInfos": Array [],
              "parentProcessInfo": [Circular],
              "processId": 4,
              "processName": "executable2.exe",
            },
          ],
          "parentProcessInfo": [Circular],
          "processId": 2,
          "processName": "executable0.exe",
        },
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "executable1.exe",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 1,
      "processName": "System",
    },
  ],
  "parentProcessInfo": undefined,
  "processId": 0,
  "processName": "System Idle Process",
}
`;

exports[`Executable process list parses win32 stream output 2`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 4,
          "processName": "executable2.exe",
        },
      ],
      "parentProcessInfo": [Circular],
      "processId": 2,
      "processName": "executable0.exe",
    },
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 3,
      "processName": "executable1.exe",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": undefined,
    "processId": 0,
    "processName": "System Idle Process",
  },
  "processId": 1,
  "processName": "System",
}
`;

exports[`Executable process list parses win32 stream output 3`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 4,
      "processName": "executable2.exe",
    },
  ],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
      Object {
        "childProcessInfos": Array [],
        "parentProcessInfo": [Circular],
        "processId": 3,
        "processName": "executable1.exe",
      },
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "System Idle Process",
    },
    "processId": 1,
    "processName": "System",
  },
  "processId": 2,
  "processName": "executable0.exe",
}
`;

exports[`Executable process list parses win32 stream output 4`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
        Object {
          "childProcessInfos": Array [],
          "parentProcessInfo": [Circular],
          "processId": 3,
          "processName": "executable1.exe",
        },
      ],
      "parentProcessInfo": Object {
        "childProcessInfos": Array [
          [Circular],
        ],
        "parentProcessInfo": undefined,
        "processId": 0,
        "processName": "System Idle Process",
      },
      "processId": 1,
      "processName": "System",
    },
    "processId": 2,
    "processName": "executable0.exe",
  },
  "processId": 4,
  "processName": "executable2.exe",
}
`;

exports[`Executable process list parses win32 stream output 5`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      Object {
        "childProcessInfos": Array [
          Object {
            "childProcessInfos": Array [],
            "parentProcessInfo": [Circular],
            "processId": 4,
            "processName": "executable2.exe",
          },
        ],
        "parentProcessInfo": [Circular],
        "processId": 2,
        "processName": "executable0.exe",
      },
      [Circular],
    ],
    "parentProcessInfo": Object {
      "childProcessInfos": Array [
        [Circular],
      ],
      "parentProcessInfo": undefined,
      "processId": 0,
      "processName": "System Idle Process",
    },
    "processId": 1,
    "processName": "System",
  },
  "processId": 3,
  "processName": "executable1.exe",
}
`;

exports[`Executable process list parses win32 stream output 6`] = `
Object {
  "childProcessInfos": Array [
    Object {
      "childProcessInfos": Array [],
      "parentProcessInfo": [Circular],
      "processId": 5,
      "processName": "executable3.exe",
    },
  ],
  "parentProcessInfo": undefined,
  "processId": 6,
  "processName": "",
}
`;

exports[`Executable process list parses win32 stream output 7`] = `
Object {
  "childProcessInfos": Array [],
  "parentProcessInfo": Object {
    "childProcessInfos": Array [
      [Circular],
    ],
    "parentProcessInfo": undefined,
    "processId": 6,
    "processName": "",
  },
  "processId": 5,
  "processName": "executable3.exe",
}
`;
